# playstore-pricing-market-analysis

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: check_raw_data.py  create_validation_report.py  data_clean_prep.py  day1_findings.md  diagnose_saturation.py  diagnostic_script.py  downloads_regression_analysis.py  investigate_extreme_values.py  investigate_medical_family.py  market_opportunity_analysis  pricing_analysis.py  saturation_metrics.py  social_media_visualizations.py  statistical_validation.py  verify_corrected_pricing_analysis.py  visualize_category_anomalies.py  visualize_saturation_comparison.py
notebooks/day1/: day1_findings.md  explore_data_fixed.py  initial_exploration.py
playstore_analysis/: __init__.py  data_loader.py  dataset.py  explore_data.py  features.py  plots.py
playstore_analysis/modeling/: predict.py  train.py
reports/: category_validation_report.csv  data_quality_report.json
reports/market_analysis/: category_lifecycle_analysis.csv  category_trends.csv  competition_dynamics.csv  corrected_market_insights.txt  corrected_market_summary.csv  corrected_opportunity_analysis.csv  corrected_saturation_rankings.csv  market_clusters.csv  market_insights_summary.txt  market_saturation_analysis.csv  opportunity_gap_analysis.csv
reports/pricing_analysis/: category_price_effects.csv  category_price_effects_business.csv  cluster_categories.csv  cluster_categories_legitimate.csv  optimal_price_by_category.csv  optimal_price_by_category_business.csv  price_elasticity_by_category.csv  (+12 more)
